--- a/css/main.css
+++ b/css/main.css
@@ -1,14 +1,18 @@
 /* Global rules */
 
-@import url('https://fonts.googleapis.com/css?family=Quicksand');
-
+@import url('https://fonts.googleapis.com/css?family=Quicksand|Spectral');
 html {
-    background-color: lightgray;
+    background-image: url("../images/background.jpg");
+    background-repeat: no-repeat;
+    background-size: 2000px 1200px;
     font-family: 'Quicksand', sans-serif;
     font-size: 0.95em;
     line-height: 1.5em;
 }
 
+body{
+    margin:0; /* removes space above body, top of page */
+}
 ::selection {
     color: #000; 
     background: #ff0;
@@ -19,11 +23,28 @@ h1 {
     margin: auto;
     background: #fff;
     line-height: 2.5em;
+
 }
+
+/* Adds google font to H1 for main pages */
+h1.page-header{
+    font-family: 'Spectral',serif;
+    -webkit-border-top-left-radius: 5px;
+    -webkit-border-top-right-radius: 5px;
+    -moz-border-radius-topleft: 5px;
+    -moz-border-radius-topright: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
 
 main.wrapper {
     background-color: white;
     overflow: auto;
+    -moz-border-radius-bottomleft: 5px;
+    -moz-border-radius-bottomright: 5px;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 p {
@@ -51,6 +72,7 @@ footer {
     clear: both;
     text-align: center;
     padding: 1em;
+
 }
 
 /* Responsive rules */
